Remove out-of-date _JAVA_OPTIONS